tests/paczka1/small_fuzzy/91152785.err
Error in line 2: PBEPTsF A162 -3,1
Error in line 4: JZv A729 17,2
Error in line 3: A162 A729 71,1
